--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -1,2 +1,3 @@
+<script src="/js/home/login.js"></script>
 <input type="text" name="" id="" placeholder="id">
 <input type="text" name="" id="" placeholder="password">
