--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -1,3 +1,4 @@
-<script src="/js/home/login.js"></script>
-<input type="text" name="" id="" placeholder="id">
-<input type="text" name="" id="" placeholder="password">
+<script src="/js/home/login.js" defer></script>
+<input type="text" name="" id="id" placeholder="id">
+<input type="password" name="" id="password" placeholder="password">
+<button id="btnLogin">Login</button>
